--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,43 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar">
+      <div class="container-fluid">
+        <div class="navbar-header">
+           <%= link_to "Nifty Knitters", root_path, class: "navbar-brand" %>
+           <% if current_user %>
+            <% if current_user.admin? %>
+              <ul class="nav navbar-nav navbar-left">
+                <li > <%= link_to "Admin", '/admin' %> </li>
+              </ul>
+            <% end %>
+           <% end %>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <% if current_user %>
+          <li> <%= link_to "Products", products_path %> </li>
+            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %> </li>
+          <% else %>
+            <li> <%= link_to "Sign Up", new_user_registration_path %> </li>
+            <li> <%= link_to "Sign In", new_user_session_path %> </li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+      <% if flash[:notice] != nil %>
+        <div class="alert alert-info">
+          <%= flash[:notice] %>
+        </div>
+      <% end %>
+
+      <% if flash[:alert] != nil %>
+        <div class="alert alert-danger">
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
+
+      <%= yield %>
   </body>
 </html>
