--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,17 @@
 
 <% if @products.any? %>
   <% @products.each do |product| %>
-    <p> <%= product.name %> </p>
+    <p>
+      <%= link_to product.name, product_path(product) %> | <%= number_to_currency product.price %>
+
+      <div class="cart-form">
+        <%= form_for @order_item do |f| %>
+          <%= f.hidden_field :product_id, value: product.id %>
+          <%= f.number_field :quantity, class: "form-control" %>
+          <%= f.submit "Add to cart", class: 'btn btn-info' %>
+        <% end %>
+      </div>
+    </p>
   <% end %>
 <% else %>
     <p>Nifty products coming soon!</p>
