--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YarnShop</title>
+    <title>Yarn Shop</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav navbar-right">
           <% if current_user %>
           <li> <%= link_to "Products", products_path %> </li>
-          <li> <%= link_to "Cart", cart_path %> </li>
+          <li class="inline"> <%= link_to "Cart", cart_path %> | <%= number_to_currency current_order.total_price %></li>
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %> </li>
           <% else %>
             <li> <%= link_to "Sign Up", new_user_registration_path %> </li>
