--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,9 @@
 <h1> <%= @product.name.capitalize %> </h1>
 
+<% if @product.stock <= 10 %>
+  <h5 id="low-stock">Low stock</h5>
+<% end %>
+
 <h3>Reviews</h3>
 <hr>
 
