Add sale price.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
   <% @discount_products.each do |product| %>
 
     <p>
-      <%= link_to product.name.capitalize, product_path(product) %> | <%= number_to_currency product.price %>
+      <%= link_to product.name.capitalize, product_path(product) %> | <%= number_to_currency product.sale_price %> (Original Price : <%= number_to_currency product.price %>)
       <% if product.stock <= 10 %>
         <h6 id="low-stock">Low stock</h6>
       <% end %>
@@ -21,7 +21,7 @@
       </div>
     </p>
   <% end %>
-  
+
 <% else %>
   <p>No sale items.</p>
 <% end %>
