Add and comment out beginnings of save for later methods.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,10 +14,8 @@
           <%= f.hidden_field :product_id, value: product.id %>
           <%= f.number_field :quantity, class: "form-control" %>
           <%= f.submit "Add to cart", class: 'btn btn-info' %>
+          <%= f.submit "Save for Later", class: 'btn btn-info' %>
         <% end %>
-      </div>
-      <div class="save-for-later">
-        <button class="btn btn-info"> <%= link_to "Save for Later", cart_path, method: 'save' %> </button>
       </div>
     </p>
   <% end %>
@@ -40,10 +38,8 @@
           <%= f.hidden_field :product_id, value: product.id %>
           <%= f.number_field :quantity, class: "form-control" %>
           <%= f.submit "Add to cart", class: 'btn btn-info' %>
+          <%= f.submit "Save for Later", class: 'btn btn-info' %>
         <% end %>
-      </div>
-      <div class="save-for-later">
-        <button class="btn btn-info"> <%= link_to "Save for Later", cart_path, method: 'save' %> </button>
       </div>
     </p>
   <% end %>
