--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -10,6 +10,7 @@
 </ol>
 <hr>
   <p>Your Total: <%= number_to_currency current_order.total_price %></p>
+  <button type="button" class="btn btn-info">Checkout</button>
 <% else %>
   <p>Your shopping cart is empty.</p>
 <% end %>
