--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <ul class="nav navbar-nav navbar-right">
           <% if current_user %>
           <li> <%= link_to "Products", products_path %> </li>
+          <li> <%= link_to "Order History" %> </li>
           <li class="inline"> <%= link_to "Cart", cart_path %> <%= number_to_currency current_order.total_price %></li>
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %> </li>
           <% else %>
