--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
             <h6 id="low-stock">Low stock</h6>
           <% end %>
 
-          <div class="cart-form">
+          <div class="specials-form">
             <%= form_for @order_item do |f| %>
               <%= f.hidden_field :product_id, value: product.id %>
               <%= f.number_field :quantity, class: "form-control" %>
@@ -38,7 +38,7 @@
             <h6 id="low-stock">Low stock</h6>
           <% end %>
 
-          <div class="cart-form">
+          <div class="specials-form">
             <%= form_for @order_item do |f| %>
               <%= f.hidden_field :product_id, value: product.id %>
               <%= f.number_field :quantity, class: "form-control" %>
