prevent users from putting item in cart if out of stock.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,10 @@ nav a {
 
 }
 
+.btn {
+  background-color: rgb(206, 210, 208);
+}
+
 body {
   margin-bottom: 100px;
   font-family: 'Open Sans', sans-serif;
