--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -3,5 +3,5 @@
     <%= f.label :content %>
     <%= f.text_area :content, class: "form-control", rows: 4, cols: 50%>
   </div>
-  <%= f.submit class: "btn btn-info" %>
+  <%= f.submit class: "btn" %>
 <% end %>
