--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,8 +15,8 @@
             <%= form_for @order_item do |f| %>
               <%= f.hidden_field :product_id, value: product.id %>
               <%= f.number_field :quantity, class: "form-control" %>
-              <%= f.submit "Add to cart", class: 'btn btn-info' %>
-              <%= f.submit "Save for Later", class: 'btn btn-info' %>
+              <%= f.submit "Add to cart", class: 'btn ' %>
+              <%= f.submit "Save for Later", class: 'btn ' %>
             <% end %>
           </div>
         </p>
@@ -42,8 +42,8 @@
             <%= form_for @order_item do |f| %>
               <%= f.hidden_field :product_id, value: product.id %>
               <%= f.number_field :quantity, class: "form-control" %>
-              <%= f.submit "Add to cart", class: 'btn btn-info' %>
-              <%= f.submit "Save for Later", class: 'btn btn-info' %>
+              <%= f.submit "Add to cart", class: 'btn ' %>
+              <%= f.submit "Save for Later", class: 'btn ' %>
             <% end %>
           </div>
         </p>
@@ -73,8 +73,8 @@
           <%= form_for @order_item do |f| %>
             <%= f.hidden_field :product_id, value: product.id %>
             <%= f.number_field :quantity, class: "form-control" %>
-            <%= f.submit "Add to cart", class: 'btn btn-info' %>
-            <%= f.submit "Save for Later", class: 'btn btn-info' %>
+            <%= f.submit "Add to cart", class: 'btn ' %>
+            <%= f.submit "Save for Later", class: 'btn ' %>
           <% end %>
         </div>
       </div>
