Display name on review page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,11 @@ nav a {
   background-color: rgb(206, 210, 208);
 }
 
+#yarn-header {
+  text-align: center;
+  font-size: 40px;
+}
+
 body {
   margin-bottom: 100px;
   font-family: 'Open Sans', sans-serif;
