--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -56,7 +56,7 @@
 
 </div>
 <hr>
-<h1>Yarn</h1>
+<h1 id="yarn-header">Yarn</h1>
 <% if @products.any? %>
   <div class="all-yarn">
     <% @products.each do |product| %>
