--- a/app/views/reviews/_index.html.erb
+++ b/app/views/reviews/_index.html.erb
@@ -4,7 +4,7 @@
       <div class="review-content">
         <p><%= review.content %></p>
       </div>
-      <footer class="blockquote-footer"><%= review.user %></footer>
+      <footer class="blockquote-footer"><%= review.user.name %></footer>
     </blockquote>
   <% end %>
 <% else %>
