Add stripe API and routes.

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -10,7 +10,7 @@
 </ol>
 <hr>
   <p>Your Total: <%= number_to_currency current_order.total_price %></p>
-  <button type="button" class="btn">Checkout</button>
+  <button type="button" class="btn"> <%= link_to "Checkout", new_charge_path %> </button>
 <% else %>
   <p>Your shopping cart is empty.</p>
 <% end %>
