--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,18 +1,22 @@
-<%= form_tag charges_path do %>
-  <article>
-    <% if flash[:error].present? %>
-      <div id="error_explanation">
-        <p><%= flash[:error] %></p>
-      </div>
-    <% end %>
-    <label class="amount">
-      <span>Amount: <%= number_to_currency current_order.total_price %> </span>
-    </label>
-  </article>
+<div class="checkout-section">
+  <h1>Checkout</h1>
+  <%= form_tag charges_path do %>
+    <article>
+      <% if flash[:error].present? %>
+        <div id="error_explanation">
+          <p><%= flash[:error] %></p>
+        </div>
+      <% end %>
+      <label class="amount">
+        <span>Amount: <%= number_to_currency current_order.total_price %> </span>
+      </label>
+    </article>
 
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="Checkout"
-          data-amount="<%= (current_order.total_price) * 100 %>"
-          data-locale="auto"></script>
-<% end %>
+    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+            data-description="Checkout"
+            data-amount="<%= (current_order.total_price) * 100 %>"
+            data-locale="auto"></script>
+  <% end %>
+
+</div>
