--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,1 @@
-<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+<h2>Your order of <strong> <%= number_to_currency current_order.total_price %></strong> is being processed!</h2>
