empty cart when order processed.

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -8,7 +8,7 @@
         </div>
       <% end %>
       <label class="amount">
-        <span>Amount: <%= @amount %> </span>
+        <h4><span>Amount: <%= number_to_currency current_order.total_price %> </span></h4>
       </label>
     </article>
 
