--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -2,10 +2,9 @@
 
 <% if @orders.any? %>
   <% @orders.each do |order| %>
-    <p> <%= order.order_items.first %> </p>
+    <p> <%= order.order_items %> </p>
+    <%= @orders.first.order_items.first.product.name %>
   <% end %>
 <% else %>
   <p>You haven't made any orders yet.</p>
 <% end %>
-
-<%= @orders.first.order_items.first.product %>
