--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -70,7 +70,7 @@
         <% end %>
 
         <div class="cart-form">
-          <%= form_for @order_item do |f| %>
+          <%= form_for @order_item, remote: true do |f| %>
             <%= f.hidden_field :product_id, value: product.id %>
             <%= f.number_field :quantity, class: "form-control" %>
             <%= f.submit "Add to cart", class: 'btn ' %>
