--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@
           <% end %>
 
           <div class="specials-form">
-            <%= form_for @order_item do |f| %>
+            <%= form_for @order_item, remote: true do |f| %>
               <%= f.hidden_field :product_id, value: product.id %>
               <%= f.number_field :quantity, class: "form-control" %>
               <%= f.submit "Add to cart", class: 'btn ' %>
@@ -39,7 +39,7 @@
           <% end %>
 
           <div class="specials-form">
-            <%= form_for @order_item do |f| %>
+            <%= form_for @order_item, remote: true do |f| %>
               <%= f.hidden_field :product_id, value: product.id %>
               <%= f.number_field :quantity, class: "form-control" %>
               <%= f.submit "Add to cart", class: 'btn ' %>
