Add token based api keys for get and post destination request.

--- a/app/views/products/welcome.html.erb
+++ b/app/views/products/welcome.html.erb
@@ -33,4 +33,8 @@
     <% end %>
   </div>
 
+  <div class="place">
+
+    <p><%= @place["city"] %>, <%= @place["country"]  %> </p>
+  </div>
 </div>
